# fanOS

./: .bochsrc  .gdbinit  .gitignore  KRNLDR.SYS  Makefile  README.md  a20.inc  boot.asm  boot_sector.asm  common.inc  fat12.inc  floppy16.inc  gdt.inc  stage2.asm  stage3.asm  stdio.inc
src/: CMakeLists.txt  Makefile  compile_commands.json  entry.asm  kernel.c  kernel_entry.asm  kernel_utils.asm  stage3.c
src/.cache/clangd/index/: gdt.c.DB687B761FE08EDE.idx  (+4 more)
src/boot/: CMakeLists.txt  Makefile  compile_commands.json  stage2.asm  stage3.asm
src/boot/include/: fat12.inc
src/include/: userland.c  userspace.c
src/include/C/: ctype.h  null.h  stdbool.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
src/include/Hal/: gdt.c  gdt.h  idt.c  idt.h
src/include/debug/: display.c  display.h
src/include/filesystem/: bpb.h  fat12.c  fat12.h  file.c  file.h  floppydisk.c  floppydisk.h
src/include/floppydisk/: fd.c  fd.h
src/include/hal/: dma.c  dma.h  gdt.c  gdt.h  idt.c  idt.h  pic.c  pic.h  tss.c  tss.h  user.asm  user.c  user.h  usermode.asm
src/include/interrupts/: exceptions.c  exceptions.h  floppydisk.c  floppydisk.h  idt.c  keyboard.c  keyboard.h  keymap.h  pic.c  pic.h  pit.c  pit.h  syscall.c  syscall.h
src/include/memory/: malloc.c  malloc.h  phyical_mmgnr.h  physical_mmgnr.c  physical_mmngr.c  physical_mmngr.h  virtual_mmgnr.h  virtual_mmngr.h  virutal_mmgnr.c  virutal_mmngr.c  vmmngr_pde.c  vmmngr_pde.h  vmmngr_pte.c  vmmngr_pte.h
src/include/ports/: io.c  io.h
src/include/storage/: fat12.c  fat12.h  floppydisk.c  floppydisk.h
(+8 files in other folders)
